--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: dormouse0224
 markdown: kramdown
-highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+# highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
